--- a/packages/grid/grid.css
+++ b/packages/grid/grid.css
@@ -1,24 +1,24 @@
 :root {
   /* Settings */
   --grid-columns-number: 24;
-  --grid-columns-min: 13;
-  --grid-columns-max: 50;
+  --grid-columns-width-min: 13;
+  --grid-columns-width-max: 50;
   --grid-width-max: 1920;
   --grid-column-gap: 0;
   --grid-margin-inline: 2vw; /* TODO: 'vw' should be replaced with 'vi' following the support of the browsers */
 
   /* Values calculation & Units assignment */
-  --grid-width-min: calc(var(--grid-columns-number) * var(--grid-columns-min));
+  --grid-width-min: calc(var(--grid-columns-number) * var(--grid-columns-width-min));
   --grid-width-min-size: calc(var(--grid-width-min) * 1px);
   --grid-width-max-size: calc(var(--grid-width-max) * 1px);
-  --grid-columns-min-size: calc(var(--grid-columns-min) * 1px);
-  --grid-columns-max-size: calc(var(--grid-columns-max) * 1px);
+  --grid-columns-width-min-units: calc(var(--grid-columns-width-min) * 1px);
+  --grid-columns-width-max-units: calc(var(--grid-columns-width-max) * 1px);
   --grid-column-gap-size: calc(var(--grid-column-gap) * 1px);
   --grid-column-size: calc(100% / var(--grid-columns-number));
 
   /* Layout */
-  --grid-columns-minmax: minmax(var(--grid-columns-min-size), var(--grid-columns-max-size));
-  --grid-template-columns-number: repeat(var(--grid-columns-number), var(--grid-columns-minmax));
+  --grid-columns-width-minmax: minmax(var(--grid-columns-width-min-units), var(--grid-columns-width-max-units));
+  --grid-template-columns-number: repeat(var(--grid-columns-number), var(--grid-columns-width-minmax));
   --grid-template-columns: [expand-start] minmax(var(--grid-margin-inline), 1fr) [grid-start] var(--grid-template-columns-number) [grid-end] minmax(var(--grid-margin-inline), 1fr) [expand-end];
 }
 
