Add z-index dependency from backdrop component

--- a/packages/dialog/dialog.css
+++ b/packages/dialog/dialog.css
@@ -1,6 +1,6 @@
 .dialog {
   position: fixed;
-  z-index: 100;
+  z-index: calc(var(--backdrop--z-index, 99) + 1);
   top: 0;
   right: 0;
   bottom: 0;
