--- a/packages/backdrop/backdrop.css
+++ b/packages/backdrop/backdrop.css
@@ -1,3 +1,5 @@
+@custom-media --narrow-window (max-width: 30em);
+@media (--narrow-window) {}
 .backdrop-noscroll {
   overflow-y: hidden;
   height: 100%;
