--- a/packages/dialog/dialog.css
+++ b/packages/dialog/dialog.css
@@ -8,8 +8,6 @@
   display: flex;
   visibility: hidden;
   overflow: auto;
-  justify-content: center;
-  align-items: center;
   transition: visibility 0s var(--dialog__body--transition-duration, 0.5s);
   backface-visibility: hidden;
   -webkit-overflow-scrolling: touch;
@@ -23,6 +21,7 @@
 
 .dialog__body {
   max-width: 100%;
+  margin: auto;
   transition-timing-function: var(--dialog__body--transition-timing-function, ease);
   transition-duration: var(--dialog__body--transition-duration, 0.5s);
   transition-property: opacity;
