--- a/packages/breadcrumbs/breadcrumbs.css
+++ b/packages/breadcrumbs/breadcrumbs.css
@@ -1,49 +1,18 @@
-/* -------------------------------------------------- */
-/* Composition                                        */
-/* -------------------------------------------------- */
+:root {
+  --breadcrumb--separator: '\2192';
+}
 
-.breadcrumbs {
+.breadcrumb__list {
+  display: flex;
   margin: 0;
   padding-left: 0;
-  display: flex;
   list-style: none;
 }
 
-/*Item*********************************************/
-/* -------------------------------------------------- */
-/* Variables                                          */
-/* -------------------------------------------------- */
-
-:root {
-  /* Typographic */
-  --breadcrumbs-separator: "\2192";
+.breadcrumb__item {
+  display: flex;
 }
 
-/* -------------------------------------------------- */
-/* Composition                                        */
-/* -------------------------------------------------- */
-
-.breadcrumbs__item:not(:last-child)::after {
-  content: var(--breadcrumbs-separator);
-}
-
-/*lastItemNewLine*************/
-/* -------------------------------------------------- */
-/* Composition                                        */
-/* -------------------------------------------------- */
-
-.breadcrumbs_last-item-newline {
-  flex-wrap: wrap;
-}
-
-.breadcrumbs_last-item-newline :last-child {
-  flex-basis: 100%;
-}
-/*last-separator-hidden.css**********************/
-/* -------------------------------------------------- */
-/* Composition                                        */
-/* -------------------------------------------------- */
-
-.breadcrumbs_last-separator-hidden :nth-last-child(2)::after {
-  content: '';
+.breadcrumb__item:not(:last-child)::after {
+  content: var(--breadcrumb--separator);
 }
