--- a/packages/grid/grid.css
+++ b/packages/grid/grid.css
@@ -27,6 +27,7 @@
   max-width: var(--grid-width-max-size);
   display: grid;
   grid-template-columns: var(--grid-template-columns);
+  grid-template-areas: var(--grid-template-areas);
   grid-column-gap: var(--grid-column-gap-size);
 }
 
